--- a/proyecte--2/index.html
+++ b/proyecte--2/index.html
@@ -48,6 +48,9 @@
   </a>
 
 
+  <div class="container-fluid"></div>
+  
+
   <!-- FOOTER -->
   <div class="container"></div>
   <footer class="py-3 my-4">
