Actualizacion de 5ta pagina html ofertas

--- a/proyecte--2/index.html
+++ b/proyecte--2/index.html
@@ -43,13 +43,23 @@
     </div>
   </nav>
 
+
+  <!-- OFERTAS -->
+
+  <div class="p-5 mb-4 bg-body-danger rounded-3">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">OFERTAS</h1>
+      <p class="col-md-8 fs-4">Rebajas de verano tanto en loza completa como en platos individuales!</p>
+      <a href="ofertas.html" class="btn btn-secondary btn-lg">Ver ofertas</a>
+    </div>
+  </div>
+
+
   <a href="">
     <img class="img-fluid" src="img/background.jpg" alt="Fondo platos Lindos">
   </a>
 
 
-  <div class="container-fluid"></div>
-  
 
   <!-- FOOTER -->
   <div class="container"></div>
