--- a/proyecte--2/vajillacompleta.html
+++ b/proyecte--2/vajillacompleta.html
@@ -147,7 +147,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Aceptar</button>
-          <button type="button" class="btn btn-primary">Cancelar</button>
+          <button type="button" class="btn btn-danger">Cancelar</button>
         </div>
       </div>
     </div>
